--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,18 +1,22 @@
 appdirs==1.4.4
 asgiref==3.3.4; python_version >= "3.6"
 attrs==20.3.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+black==22.3.0; python_full_version >= "3.6.2"
+blinker==1.6.2; python_version >= "3.8"
+brotli==1.0.9; python_version >= "3.7"
 certifi==2020.12.5
-cffi==1.15.1; implementation_name == "pypy" and python_version >= "3.6" and platform_python_implementation == "CPython" and sys_platform == "win32" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_version > "3.5")
+cffi==1.15.1; implementation_name == "pypy" and python_version >= "3.7" and platform_python_implementation == "CPython" and sys_platform == "win32" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_version > "3.5") and (python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7")
 cfgv==3.2.0; python_full_version >= "3.6.1"
 chardet==4.0.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 click==8.1.4; python_version >= "3.7"
-colorama==0.4.6; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" and sys_platform == "win32" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7") or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.7.0" and sys_platform == "win32" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
+colorama==0.4.6; platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.7.0" and sys_platform == "win32" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
 configargparse==1.4.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 convertdate==2.3.2; python_version >= "3.5"
 coverage==5.5; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
 defusedxml==0.6.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 diff-match-patch==20200713; python_version >= "2.7"
 distlib==0.3.6
+django-debug-toolbar==3.2.4; python_version >= "3.6"
 django-environ==0.4.5
 django-import-export==2.5.0; python_version >= "3.5"
 django-ipware==3.0.7; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
@@ -29,7 +33,12 @@ exceptiongroup==1.1.2; python_version < "3.11" and python_version >= "3.7" and (
 factory-boy==3.2.1; python_version >= "3.6"
 faker==6.0.0; python_version >= "3.6"
 filelock==3.0.12
+flake8==4.0.1; python_version >= "3.6"
+flask-basicauth==0.2.0; python_version >= "3.7"
+flask-cors==4.0.0; python_version >= "3.7"
+flask==2.3.2; python_version >= "3.8"
 gevent==22.10.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_version > "3.5")
+geventhttpclient==2.0.9; python_version >= "3.7"
 greenlet==2.0.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 gunicorn==20.0.4; python_version >= "3.4"
 hawkrest==1.0.1
@@ -44,9 +53,11 @@ jdcal==1.4.1
 jinja2==3.1.2; python_version >= "3.7"
 korean-lunar-calendar==0.2.1
 kubi-ecs-logger==0.1.0; python_version >= "3.6" and python_version < "4"
+locust==2.15.1; python_version >= "3.7"
 markuppy==1.14
 markupsafe==2.1.3; python_version >= "3.7"
 marshmallow==3.6.1; python_version >= "3.5"
+mccabe==0.6.1; python_version >= "3.6"
 mohawk==1.1.0
 msgpack==1.0.5
 mypy-extensions==0.4.4; python_version >= "2.7"
@@ -56,13 +67,18 @@ odfpy==1.4.1
 openpyxl==3.0.10; python_version >= "3.6"
 packaging==20.9; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 pathspec==0.9.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+pep517==0.13.0; python_version >= "3.6"
+pip-tools==6.0.1; python_version >= "3.6"
+platformdirs==3.8.1; python_version >= "3.7" and python_full_version >= "3.6.2"
 pluggy==0.13.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 pre-commit==2.10.1; python_full_version >= "3.6.1"
 psutil==5.8.0; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 psycogreen==1.0.2
 psycopg2-binary==2.9.6; python_version >= "3.6"
 py==1.11.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+pycodestyle==2.8.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" and platform_python_implementation == "CPython" and sys_platform == "win32" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_version > "3.5") or implementation_name == "pypy" and python_version >= "3.6" and platform_python_implementation == "CPython" and sys_platform == "win32" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_version > "3.5") and python_full_version >= "3.4.0"
+pyflakes==2.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pymeeus==0.5.12
 pyparsing==2.4.7; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
@@ -70,18 +86,20 @@ pytest-django==4.1.0; python_version >= "3.5"
 pytest==7.2.2; python_version >= "3.7"
 python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 pytz==2020.5
+pywin32==306; platform_system == "Windows" and python_version >= "3.7"
 pyyaml==5.4.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 pyzmq==22.2.1; python_version >= "3.6"
 regex==2020.11.13
 requests-oauthlib==1.3.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 requests==2.25.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+roundrobin==0.0.4; python_version >= "3.7"
 sentry-sdk==0.20.3
 six==1.15.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 sqlparse==0.4.4; python_version >= "3.5"
 tablib==3.0.0; python_version >= "3.6"
 text-unidecode==1.3
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-tomli==2.0.1; python_version < "3.11" and python_version >= "3.7" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
+tomli==2.0.1; python_version < "3.11" and python_version >= "3.7" and python_full_version >= "3.6.2" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
 typed-ast==1.5.5; python_version >= "3.6"
 typing-extensions==3.10.0.2
 urllib3==1.26.16; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
